--- a/leaderboards.html
+++ b/leaderboards.html
@@ -28,7 +28,7 @@
     <div class="flex items-center space-x-2">
       <a href="index.html" class="flex items-center space-x-2">
         <i data-feather="arrow-left" class="text-yellow-400"></i>
-        <h1 class="text-xl medieval-font">GuildPower Tracker Pro</h1>
+        <h1 class="text-xl medieval-font">GuildPower Tracker</h1>
       </a>
     </div>
   </nav>
