--- a/members-detail.html
+++ b/members-detail.html
@@ -112,136 +112,143 @@
   </section>
 
   <script>
-    // === Firebase Config ===
-    const firebaseConfig = {
-      apiKey: "AIzaSyDoim277EKmZDh0TnbZbK5OXy2GdVW-d84",
-      authDomain: "guildcombatpower.firebaseapp.com",
-      projectId: "guildcombatpower",
-      storageBucket: "guildcombatpower.firebasestorage.app",
-      messagingSenderId: "862355543279",
-      appId: "1:862355543279:web:e7d7c1b5ee1f3ba89f371a"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  // === Firebase Config ===
+  const firebaseConfig = {
+    apiKey: "AIzaSyDoim277EKmZDh0TnbZbK5OXy2GdVW-d84",
+    authDomain: "guildcombatpower.firebaseapp.com",
+    projectId: "guildcombatpower",
+    storageBucket: "guildcombatpower.firebasestorage.app",
+    messagingSenderId: "862355543279",
+    appId: "1:862355543279:web:e7d7c1b5ee1f3ba89f371a"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-    // === Get Member ID from URL ===
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
-    const memberId = getQueryParam('id');
-    let memberData = null;
-    let memberChart = null;
+  // === Get Member ID ===
+  function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+  }
+  const memberId = getQueryParam('id');
+  let memberData = null;
+  let memberChart = null;
 
-    // === Render Member ===
-    function renderMemberData(m) {
-      if (!m) return;
+  // === Render Member ===
+  function renderMemberData(m) {
+    if (!m) return;
 
-      document.querySelector('h2').textContent = m.name || "Unknown";
-      const classBadge = document.querySelector('.class-badge');
-      classBadge.textContent = m.class || "Unknown";
-      classBadge.className = "class-badge " + (m.classColor || "bg-gray-500");
+    // Header
+    document.querySelector('h2').textContent = m.name || "Unknown";
+    const classBadge = document.querySelector('.class-badge');
+    classBadge.textContent = m.class || "Unknown";
+    classBadge.className = "class-badge " + (m.classColor || "bg-gray-500");
+    document.querySelector('img').src = m.avatar || "https://via.placeholder.com/200";
 
-      document.querySelector('img').src = m.avatar || "https://via.placeholder.com/200";
+    // Stats
+    const stats = document.querySelectorAll(".text-2xl.font-bold");
+    stats[0].textContent = (m.cp || 0).toLocaleString();
+    stats[1].textContent = ((m.growth || 0) >= 0 ? "+" : "") + (m.growth || 0).toLocaleString();
+    stats[2].textContent = "#" + (m.rank || "-");
+    stats[3].textContent = "Week " + ((m.weeklyCP?.length) || 1);
 
-      const stats = document.querySelectorAll(".text-2xl.font-bold");
-      stats[0].textContent = (m.cp || 0).toLocaleString();
-      stats[1].textContent = ((m.growth || 0) >= 0 ? "+" : "") + (m.growth || 0).toLocaleString();
-      stats[2].textContent = "#" + (m.rank || "-");
-      stats[3].textContent = "Week " + ((m.weeklyCP?.length) || 1);
+    // Weekly Data (with fallback)
+    const tbody = document.querySelector("tbody");
+    const weeklyData = Array.isArray(m.weeklyCP) && m.weeklyCP.length > 0
+      ? m.weeklyCP
+      : [{ week: "Week 1", cp: m.cp || 0, growth: 0, rank: m.rank || "-" }];
 
-      // === Weekly Table ===
-      const tbody = document.querySelector("tbody");
-      const weeklyData = m.weeklyCP?.length ? m.weeklyCP : [{ week: "Week 1", cp: 0, growth: 0, rank: "-" }];
-      tbody.innerHTML = weeklyData
-        .map(w => `
-          <tr class="border-b border-gray-700">
-            <td class="py-3">${w.week}</td>
-            <td class="py-3 font-bold">${(w.cp || 0).toLocaleString()}</td>
-            <td class="py-3 text-green-400">${(w.growth >= 0 ? "+" : "") + (w.growth || 0).toLocaleString()}</td>
-            <td class="py-3">${w.rank || "-"}</td>
-          </tr>
-        `)
-        .join("");
+    // Debug
+    console.log("Loaded weeklyCP:", weeklyData);
 
-      // === Chart ===
-      const ctx = document.getElementById("memberProgressChart").getContext("2d");
-      if (memberChart) memberChart.destroy();
-      memberChart = new Chart(ctx, {
-        type: "line",
-        data: {
-          labels: weeklyData.map(w => w.week),
-          datasets: [
-            {
-              label: "Combat Power",
-              data: weeklyData.map(w => w.cp || 0),
-              borderColor: "#3b82f6",
-              backgroundColor: "rgba(59,130,246,0.1)",
-              tension: 0.4,
-              fill: true
-            }
-          ]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: { legend: { display: false } },
-          scales: {
-            y: { beginAtZero: false, grid: { color: "rgba(255,255,255,0.1)" } },
-            x: { grid: { color: "rgba(255,255,255,0.1)" } }
-          }
+    // Table
+    tbody.innerHTML = weeklyData
+      .map(w => `
+        <tr class="border-b border-gray-700">
+          <td class="py-3">${w.week || "?"}</td>
+          <td class="py-3 font-bold">${(w.cp || 0).toLocaleString()}</td>
+          <td class="py-3 text-green-400">${(w.growth >= 0 ? "+" : "") + (w.growth || 0).toLocaleString()}</td>
+          <td class="py-3">${w.rank || "-"}</td>
+        </tr>
+      `)
+      .join("");
+
+    // Chart
+    const ctx = document.getElementById("memberProgressChart").getContext("2d");
+    if (memberChart) memberChart.destroy();
+
+    memberChart = new Chart(ctx, {
+      type: "line",
+      data: {
+        labels: weeklyData.map(w => w.week || ""),
+        datasets: [{
+          label: "Combat Power",
+          data: weeklyData.map(w => w.cp || 0),
+          borderColor: "#3b82f6",
+          backgroundColor: "rgba(59,130,246,0.1)",
+          tension: 0.4,
+          fill: true
+        }]
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: { legend: { display: false } },
+        scales: {
+          y: { beginAtZero: false, grid: { color: "rgba(255,255,255,0.1)" } },
+          x: { grid: { color: "rgba(255,255,255,0.1)" } }
         }
-      });
-
-      feather.replace();
-    }
-
-    // === Listen Live to Member Updates ===
-    if (memberId) {
-      db.collection("members").doc(memberId).onSnapshot(doc => {
-        if (doc.exists) {
-          memberData = doc.data();
-          renderMemberData(memberData);
-        } else {
-          alert("Member not found");
-        }
-      }, err => {
-        console.error("Error fetching live data:", err);
-      });
-    } else {
-      alert("No member ID provided");
-    }
-
-    // === Update CP ===
-    document.getElementById("updateCP").addEventListener("click", async () => {
-      if (!memberData) return alert("Member data not loaded yet");
-      const newCP = prompt("Enter new CP:", memberData.cp || 0);
-      if (newCP === null) return;
-      const cpVal = parseInt(newCP);
-      if (isNaN(cpVal)) return alert("Invalid number");
-
-      const growth = cpVal - (memberData.cp || 0);
-      const newWeek = "Week " + ((memberData.weeklyCP?.length || 0) + 1);
-      const weeklyEntry = { week: newWeek, cp: cpVal, growth: growth, rank: "-" };
-      const updatedWeekly = [...(memberData.weeklyCP || []), weeklyEntry];
-
-      await db.collection("members").doc(memberId).update({
-        cp: cpVal,
-        growth: growth,
-        weeklyCP: updatedWeekly
-      });
-
-      alert("Combat Power updated!");
-    });
-
-    // === Delete Member ===
-    document.getElementById("deleteMember").addEventListener("click", async () => {
-      if (confirm("Are you sure you want to delete this member?")) {
-        await db.collection("members").doc(memberId).delete();
-        alert("Member deleted");
-        window.location.href = "index.html";
       }
     });
-  </script>
+
+    feather.replace();
+  }
+
+  // === Listen Live to Member Updates ===
+  if (memberId) {
+    db.collection("members").doc(memberId).onSnapshot(doc => {
+      if (doc.exists) {
+        memberData = doc.data();
+        renderMemberData(memberData);
+      } else {
+        alert("Member not found");
+      }
+    }, err => {
+      console.error("Error fetching live data:", err);
+    });
+  } else {
+    alert("No member ID provided");
+  }
+
+  // === Update CP ===
+  document.getElementById("updateCP").addEventListener("click", async () => {
+    if (!memberData) return alert("Member data not loaded yet");
+    const newCP = prompt("Enter new CP:", memberData.cp || 0);
+    if (newCP === null) return;
+    const cpVal = parseInt(newCP);
+    if (isNaN(cpVal)) return alert("Invalid number");
+
+    const growth = cpVal - (memberData.cp || 0);
+    const newWeek = "Week " + ((memberData.weeklyCP?.length || 0) + 1);
+    const weeklyEntry = { week: newWeek, cp: cpVal, growth: growth, rank: "-" };
+    const updatedWeekly = [...(memberData.weeklyCP || []), weeklyEntry];
+
+    await db.collection("members").doc(memberId).update({
+      cp: cpVal,
+      growth: growth,
+      weeklyCP: updatedWeekly
+    });
+
+    alert("Combat Power updated!");
+  });
+
+  // === Delete Member ===
+  document.getElementById("deleteMember").addEventListener("click", async () => {
+    if (confirm("Are you sure you want to delete this member?")) {
+      await db.collection("members").doc(memberId).delete();
+      alert("Member deleted");
+      window.location.href = "index.html";
+    }
+  });
+</script>
 </body>
 </html>
